--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,109 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HOME">
+    tools:context=".HOME"
+    android:background="">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/navbar"
+                android:gravity="start"
+                android:orientation="horizontal"
+                android:paddingHorizontal="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/meni" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="356dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/ralewaysemibold"
+                    android:gravity="center"
+                    android:text="Data Kategori"
+                    android:textColor="@color/white" />
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="60dp"
+                    android:layout_height="25dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/logo" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="474dp"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView7"
+                    android:layout_width="338dp"
+                    android:layout_height="300dp"
+                    android:layout_marginBottom="0dp"
+                    android:src="@drawable/banksampahlogo2" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="bottom"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:background="@drawable/bawahsebelumlog"
+                    android:orientation="vertical"
+                    android:paddingHorizontal="35dp"
+                    android:outlineAmbientShadowColor="@color/black"
+                    android:paddingVertical="35dp">
+
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/ungu"
+                        android:fontFamily="@font/ralewaymedium"
+                        android:text="BELUM PUNYA AKUN?"
+                        android:layout_marginBottom="8dp"/>
+
+                    <Button
+                        android:id="@+id/button6"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/ralewaymedium"
+                        android:text=" CRATE ACCOUNT"
+                        android:textSize="23dp"
+                        android:background="@drawable/strokebutton"
+                        android:paddingHorizontal="20dp"
+                        android:gravity="left|center"
+                        android:drawableStart="@drawable/minilogo2"/>
+
+                    <Button
+                        android:id="@+id/button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Button"
+                        android:background="#FF0909"/>
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
