--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -104,7 +104,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Button"
-                        android:background="#FF0909"/>
+                        android:background="#805555"/>
                 </LinearLayout>
             </LinearLayout>
 
