--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,14 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dasar">#2BA84A</color>
+    <color name="aksen">#F8A223</color>
+    <color name="hapus">#EF1E1E</color>
+    <color name="teks">#040F0F</color>
+    <color name="pendukung">#89CF81</color>
+    <color name="background">#FCFFFC</color>
+    <color name="button">#EFEFEF</color>
+    <color name="abu">#A1A1A1</color>
+    <color name="ungu">#4E4EE1</color>
+    <color name="biru">#192655</color>
 </resources>
